--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="dashboard">Dashboard</string>
-    <string name="agregar">Agregar</string>
-    <string name="listado">Listado</string>
-    <string name="actualizar">Actualizar</string>
-    <string name="eliminar">Eliminar</string>
+    <string name="agregar">Equipos</string>
+    <string name="listado">Agregar Equipo</string>
+    <string name="actualizar">Agregar Jugador</string>
+    <string name="eliminar">Fichaje</string>
 
     <string name="error_sms">Error</string>
     <string name="confirm_text">OK</string>
@@ -23,9 +23,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="configuracion">Configuracionr</string>
+    <string name="configuracion">Configuracion</string>
     <string name="ip">ip</string>
     <string name="database_name">data_name</string>
     <string name="user_name">user_name</string>
     <string name="password">password</string>
+    <string name="eliminar_entrenador">Eliminar Entrenador</string>
+    <string name="agregar_partido">Agregar Partido</string>
 </resources>
